--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
   <h1>
-    Welcome to {{ title }} Fork 1!
+    Welcome to {{ title }} Fork 2 mit Branch!
   </h1>
   <img
     width="300"
